--- a/vscode/.vscode/launch.json
+++ b/vscode/.vscode/launch.json
@@ -1,6 +1,12 @@
 {
   "version": "0.2.0",
   "configurations":[
+  {
+    "type": "node",
+    "request": "attach",
+    "name": "Attach to Port",
+    "port": 6009
+  },
     {
       "type": "extensionHost",
       "request": "launch",
